[package]
name = "ipdm-gossipsub-sol"
version = "0.1.0"
edition = "2021"

[dependencies]
# Libp2p
libp2p = { version = "0.54.1", features = ["tokio", "gossipsub", "noise", "mdns", "tcp", "macros"] }
tokio = { version = "1.41.1", features = ["full"] }
async-trait = "0.1.83"

# Solana dependencies 
solana-geyser-plugin-interface = "^1.18"
solana-logger = "^1.17"
solana-sdk = "^1.17"
solana-zk-token-sdk = "1.17"
spl-token-2022 = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"

# Utilities
log = "0.4"
env_logger = "0.10"
futures = "0.3"
bs58 = "0.5"

[patch.crates-io]
der = { git = "https://github.com/tavakyan/formats.git", branch = "fix/downgrade-zeroize-version" }
curve25519-dalek = { git = "https://github.com/solana-labs/curve25519-dalek.git", rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464" }

[lib]
name = "ipdm_gossipsub_sol"
path = "src/lib.rs"